# Copyright 2022 – present, UBC EOAS MOAD Group and The University of British Columbia
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# SPDX-License-Identifier: Apache-2.0


[build-system]
requires = [ "hatchling" ]
build-backend = "hatchling.build"


[project]
name = "Reshapr"
dynamic = [ "version" ]
description = """\
    Command-line tool based on Xarray and Dask for extraction of model variable \
    time series from model products like SalishSeaCast, HRDPS & CANESM2/CGCM4.\
    """
readme = "README.rst"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = { paths = ["LICENSE"] }
authors = [
    { name = "Doug Latornell", email= "dlatornell@eoas.ubc.ca" }
]
dependencies = [
    # see envs/environment-user.yaml for user conda environment
    # see envs/environment-dev.yaml for conda environment dev installation
    # see envs/requirements.txt for package versions used during recent development
    # see envs/environment-rtd.yaml for conda environment used for readthedocs build
    "arrow",
    "bottleneck",
    "click",
    "dask",
    "flox",
    "h5netcdf",
    "pyyaml",
    "rich",
    "structlog",
    "xarray",
]

[project.urls]
"Documentation" = "https://reshapr.readthedocs.io/en/latest/"
"Changelog" = "https://github.com/UBC-MOAD/Reshapr/releases"
"Issue Tracker" = "https://github.com/UBC-MOAD/Reshapr/issues"
"Source Code" = "https://github.com/UBC-MOAD/Reshapr"

[project.scripts]
reshapr = "reshapr.cli.commands:reshapr"


[tool.coverage.run]
branch = true
source = [ "reshapr", "tests"]

[tool.coverage.report]
show_missing = true


[tool.hatch.build.targets.wheel]
include = [
    "reshapr",
    "cluster_configs",
    "model_profiles",
]

[tool.hatch.version]
path = "reshapr/__about__.py"
