# Copyright 2022 – present, UBC EOAS MOAD Group and The University of British Columbia
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# SPDX-License-Identifier: Apache-2.0


[build-system]
requires = [ "hatchling" ]
build-backend = "hatchling.build"


[project]
name = "Reshapr"
dynamic = [ "version" ]
description = """\
    Command-line tool based on Xarray and Dask for extraction of model variable \
    time series from model products like SalishSeaCast, HRDPS & CANESM2/CGCM4.\
    """
readme = "README.rst"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = [ "LICENSE" ]
authors = [
    { name = "Doug Latornell", email= "dlatornell@eoas.ubc.ca" }
]
dependencies = [
    # see envs/environment-dev.yaml for conda environment dev installation
    # see envs/requirements.txt for package versions used during recent development
    # see envs/environment-rtd.yaml for conda environment used for readthedocs build
    "arrow",
    "bottleneck",
    "click",
    "dask",
    "flox",
    "h5netcdf",
    "netcdf4",
    "pyyaml",
    "rich",
    "structlog",
    "xarray",
]

[project.urls]
"Documentation" = "https://reshapr.readthedocs.io/en/latest/"
"Changelog" = "https://github.com/UBC-MOAD/Reshapr/releases"
"Issue Tracker" = "https://github.com/UBC-MOAD/Reshapr/issues"
"Source Code" = "https://github.com/UBC-MOAD/Reshapr"

[project.scripts]
reshapr = "reshapr.cli.commands:reshapr"


[tool.coverage.run]
branch = true
source = [ "reshapr", "tests"]

[tool.coverage.report]
show_missing = true


[tool.hatch.build.targets.wheel]
include = [
    "reshapr",
    "cluster_configs",
    "model_profiles",
]

[tool.hatch.version]
path = "reshapr/__about__.py"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64", "win-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
Reshapr = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
arrow = ">=1.4.0,<2"
bottleneck = ">=1.6.0,<2"
click = ">=8.3.2,<9"
dask = ">=2026.3.0,<2027"
flox = ">=0.11.2,<0.12"
h5netcdf = ">=1.8.1,<2"
netcdf4 = ">=1.7.4,<2"
pandas = "<3.0.0"
python = "3.14.*"
pyyaml = ">=6.0.3,<7"
rich = ">=15.0.0,<16"
structlog = ">=25.5.0,<26"
xarray = ">=2026.4.0,<2027"
