# Copyright 2022 – present, UBC EOAS MOAD Group and The University of British Columbia
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# SPDX-License-Identifier: Apache-2.0


[build-system]
requires = [ "hatchling" ]
build-backend = "hatchling.build"


[project]
name = "Reshapr"
dynamic = [ "version" ]
description = """\
    Command-line tool based on Xarray and Dask for extraction of model variable \
    time series from model products like SalishSeaCast, HRDPS & CANESM2/CGCM4.\
    """
readme = "README.rst"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = [ "LICENSE" ]
authors = [
    { name = "Doug Latornell", email= "dlatornell@eoas.ubc.ca" }
]
dependencies = [
    "arrow",
    "bottleneck",
    "click",
    "dask",
    "flox",
    "h5netcdf",
    "netcdf4",
    "pyyaml",
    "rich",
    "structlog",
    "xarray",
]

[project.urls]
"Documentation" = "https://reshapr.readthedocs.io/en/latest/"
"Changelog" = "https://github.com/UBC-MOAD/Reshapr/releases"
"Issue Tracker" = "https://github.com/UBC-MOAD/Reshapr/issues"
"Source Code" = "https://github.com/UBC-MOAD/Reshapr"

[project.scripts]
reshapr = "reshapr.cli.commands:reshapr"


[tool.coverage.run]
branch = true
source = [ "reshapr", "tests"]
omit = [ ".pixi/*" ]

[tool.coverage.report]
show_missing = true


[tool.hatch.build.targets.wheel]
include = [
    "reshapr",
    "cluster_configs",
    "model_profiles",
]

[tool.hatch.version]
path = "reshapr/__about__.py"


[tool.pixi.workspace]
channels = ["conda-forge"]
exclude-newer = "14d"
platforms = ["linux-64", "osx-arm64", "osx-64", "win-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
Reshapr = { path = ".", editable = true }

[tool.pixi.dependencies]
arrow = ">=1.4.0,<2"
bottleneck = ">=1.6.0,<2"
click = ">=8.3.2,<9"
dask = ">=2026.3.0,<2027"
flox = ">=0.11.2,<0.12"
h5netcdf = ">=1.8.1,<2"
netcdf4 = ">=1.7.4,<2"
pandas = "<3.0.0"
pixi-pycharm = ">=0.0.11,<0.0.12"
python = "*"
pyyaml = ">=6.0.3,<7"
rich = ">=14.3.3,<15"
structlog = ">=25.5.0,<26"
xarray = ">=2026.2.0,<2027"

[tool.pixi.environments]
test = { features = ["test"], solve-group = "default" }
test-py312 = ["py312", "test"]
test-py313 = ["py313", "test"]
test-py314 = ["py314", "test"]
docs = { features = ["docs"], solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

[tool.pixi.feature.test.dependencies]
pytest = ">=9.0.3,<10"
pytest-cov = ">=7.1.0,<8"
pytest-randomly = ">=3.15.0,<4"
tomli = ">=2.4.1,<3"

[tool.pixi.feature.test.tasks]
pytest = "pytest"
pytest-cov = "pytest --cov=./"
pytest-cov-html = "pytest --cov=./ --cov-report html"

[tool.pixi.feature.py312.dependencies]
python = "3.12.*"

[tool.pixi.feature.py313.dependencies]
python = "3.13.*"

[tool.pixi.feature.py314.dependencies]
python = "3.14.*"

[tool.pixi.feature.docs.dependencies]
docutils = "0.22.4.*"
mock = "5.2.0.*"
pillow = "12.2.0.*"
sphinx = "9.1.0.*"
sphinx-notfound-page = "1.1.0.*"
commonmark = "0.9.1.*"
recommonmark = "0.7.1.*"

[tool.pixi.feature.docs.tasks]
docs = { cmd = "make clean html", cwd = "docs/" }
linkcheck = { cmd = "make clean linkcheck", cwd = "docs/" }

[tool.pixi.feature.dev.dependencies]
# For coding style, repo QA, and pkg management
black = ">=26.1.0,<27"
hatch = ">=1.16.5,<2"
pip = ">=26.0.1,<27"
pre-commit = ">=4.5.1,<5"
# For unit tests
pytest = ">=9.0.3,<10"
pytest-cov = ">=7.1.0,<8"
pytest-randomly = ">=3.15.0,<4"
tomli = ">=2.4.1,<3"
# For documentation
docutils = "0.22.4.*"
sphinx = "9.1.0.*"
sphinx-notfound-page = "1.1.0.*"
commonmark = "0.9.1.*"
recommonmark = "0.7.1.*"
mock = "5.2.0.*"
pillow = "12.2.0.*"

[tool.pixi.feature.dev.tasks]
update-reqs = "python -m pip list --format=freeze >> requirements.txt"


[dependency-groups]
docs = ["sphinx-rtd-theme==3.1.0"]
dev = ["sphinx-rtd-theme==3.1.0"]
